--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -51,6 +51,64 @@
 
 </div>
 
+
+
+<!-- Delete Modal -->
+<div class="modal fade" id="deleteChatModel" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Delete Chat</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form id="delete-chat-form">
+        <div class="modal-body">
+            <input type="hidden" name="id" id="delete-message-id">
+            <p>Are u Sure?</p>
+            <p><b id="delete-message"></b></p>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
+        </div>
+      </form>
+
+
+    </div>
+  </div>
+</div>
+
+
+<!-- Update Modal -->
+<div class="modal fade" id="editChatModel" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Edit Chat</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form id="update-chat-form">
+        <div class="modal-body">
+            <input type="hidden" name="id" id="edit-message-id">
+            <input type="text" name="message" id="update-message" required placeholder="Enter-message">
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Update</button>
+        </div>
+      </form>
+
+
+    </div>
+  </div>
+</div>
+
+
+
 <script>
     var sender_id = '<%= user._id %>'
     var receiver_id
@@ -102,13 +160,18 @@
                         $('#message').val('')
                         let chat = response.data.message
                         let html = `
-                            <div class="current-user-chat">
-                                <h5 > `+chat+` </h5>
+                            <div class="current-user-chat" id='`+response.data._id+`'>
+                                <h5 > <span>`+chat+`</span> 
+                                    
+                                    <i class="fa fa-trash" aria-hidden="true" data-id='`+response.data._id+`' data-toggle="modal" data-target="#deleteChatModel"></i>
+                                    <i class="fa fa-edit" aria-hidden="true" data-id='`+response.data._id+`' data-msg='`+chat+`' data-toggle="modal" data-target="#editChatModel"></i>
+                                    </h5>
                             </div>
                             `
                             $('.chat-container').append(html)
                             socket.emit('newChat',response.data)
-                    }else{
+                            scrollChat()
+                        }else{
                         alert(data.msg)
                     }
                 }
@@ -117,7 +180,7 @@
         socket.on('loadNewChat',function(data){
             if(sender_id == data.receiver_id && receiver_id == data.sender_id){
                 let html = `
-                <div class="distance-user-chat">
+                <div class="distance-user-chat" id='`+data.id+`'>
                     <h5 > `+data.message+` </h5>
                 </div>
                 `
@@ -138,15 +201,94 @@
                     addClass = "distance-user-chat"
                 }
                 html += `
-                     <div class='`+addClass+`'>
-                                <h5 > `+chats[x]['message']+` </h5>
-                            </div>
+                     <div class='`+addClass+`' id= '`+chats[x]['_id']+`'>
+                                <h5 > <span>`+chats[x]['message']+` </span>`
+                
+                  if(chats[x]['sender_id']== sender_id){
+                    html += `<i class="fa fa-trash" aria-hidden="true" data-id='`+chats[x]['_id']+`' data-toggle="modal" data-target="#deleteChatModel"></i>
+                        <i class="fa fa-edit" aria-hidden="true" data-id='`+chats[x]['_id']+`' data-msg='`+chats[x]['message']+`' data-toggle="modal" data-target="#editChatModel"></i>
+    
+                        `
+                  }
+                                    
+                html += `
+                 </h5>
+                    </div>
+                
                 `
                
             
             }
              $('.chat-container').append(html)
+             scrollChat()
         })
         
+        function scrollChat(){
+            $('.chat-container').animate({
+                scrollTop:$('.chat-container').offset().top + $('.chat-container')[0].scrollHeight
+            },0)
+        }
+        $(document).on('click','.fa-trash',function(){
+            let msg = $(this).parent().text()
+            $('#delete-message').text(msg)
+
+            $('#delete-message-id').val($(this).attr('data-id'))
+        })
+
+        $('#delete-chat-form').submit(function(event){
+            event.preventDefault()
+            var id = $('#delete-message-id').val()
+
+            $.ajax({
+                url:'/delete-chat',
+                type:'POST',
+                data:{id:id},
+                success: function(res){
+                    if(res.success == true){
+                        $('#'+id).remove()
+                        $('#deleteChatModel').modal('hide')
+                        socket.emit('chatDeleted',id)
+                    }else{
+                        alert(res.msg)
+                    }
+                }
+            })
+        })
+
+        socket.on('chatMessageDeleted',function(id){
+            $('#'+id).remove()
+        })
+
+        $(document).on('click','.fa-edit',function(){
+            $('#edit-message-id').val( $(this).attr('data-id') )
+            $('#update-message').val( $(this).attr('data-msg') )
+        })
+
+        $('#update-chat-form').submit(function(event){
+            event.preventDefault()
+            var id = $('#edit-message-id').val()
+            var msg = $('#update-message').val()
+
+            $.ajax({
+                url:'/update-chat',
+                type:'POST',
+                data:{id:id,message:msg},
+                success: function(res){
+                    if(res.success == true){
+                        
+                        $('#editChatModel').modal('hide')
+                        $('#' +id).find('span').text(msg)
+                        $('#' +id).find('.fa-edit').attr('data-msg',msg)
+                        socket.emit('chatUpdated',{id:id,message:msg})
+                    }else{
+                        alert(res.msg)
+                    }
+                }
+            })
+        })  
+
+        socket.on('chatMessageUpdated',function(data){
+            $('#' +data.id).find('span').text(data.message)
+        })
     </script>
 <%-include('layouts/footer.ejs') %>
