--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -29,6 +29,10 @@
           <li class="active">
             <a href="/dashboard"><span class="fa fa-home mr-3"></span> Homepage</a>
           </li>
+
+          <li class="active">
+            <a href="/groups"><span class="fa fa-group mr-3"></span> Group</a>
+          </li>
          
           <li>
             <a href="/logout"><span class="fa fa-sign-out mr-3"></span> Log Out</a>
