--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -63,7 +63,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form id="delete-chat-form">
+      <form id="delete-chat-form" method="post">
         <div class="modal-body">
             <input type="hidden" name="id" id="delete-message-id">
             <p>Are u Sure?</p>
