--- a/views/admin/layouts/default2.pug
+++ b/views/admin/layouts/default2.pug
@@ -147,7 +147,7 @@ head
             i.ft-home
             span.menu-title(data-i18n='') Dashboard
         li.nav-item
-          a(href='charts.html')
+          a(href='/ad/charts')
             i.ft-pie-chart
             span.menu-title(data-i18n='') Charts
         //- li.nav-item
