--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -24,7 +24,7 @@
 	          <span class="sr-only">Toggle Menu</span>
 	        </button>
         </div>
-	  		<h1><a href="index.html" class="logo">Chat</a></h1>
+	  		<h1><a href="/dashboard" class="logo">Chat</a></h1>
         <ul class="list-unstyled components mb-5">
           <li class="active">
             <a href="/dashboard"><span class="fa fa-home mr-3"></span> Homepage</a>
@@ -33,6 +33,15 @@
           <li class="active">
             <a href="/groups"><span class="fa fa-group mr-3"></span> Group</a>
           </li>
+
+          <li class="active">
+            <a href="/posts"><span class="fa fa-sticky-note-o mr-3"></span> Post</a>
+          </li>
+
+          <li class="active">
+            <a href="/create-post"><span class="fa fa-upload mr-3"></span>Upload Post</a>
+          </li>
+         
          
          
           <li>
