--- a/views/admin/pages/charts/chart.pug
+++ b/views/admin/pages/charts/chart.pug
@@ -16,60 +16,60 @@ block main
                   li.breadcrumb-item.active
                     | Charts
         .content-body
-          // Bar charts section start
-          section#chartjs-bar-charts
-            // Column Chart
-            .row
-              .col-12
-                .card
-                  .card-header
-                    h4.card-title Column Chart
-                    a.heading-elements-toggle
-                      i.la.la-ellipsis-v.font-medium-3
-                    .heading-elements
-                      ul.list-inline.mb-0
-                        li
-                          a(data-action='collapse')
-                            i.ft-minus
-                        li
-                          a(data-action='reload')
-                            i.ft-rotate-cw
-                        li
-                          a(data-action='expand')
-                            i.ft-maximize
-                        li
-                          a(data-action='close')
-                            i.ft-x
-                  .card-content.collapse.show
-                    .card-body
-                      .height-400
-                        canvas#column-chart
-            // Bar Chart
-            .row
-              .col-12
-                .card
-                  .card-header
-                    h4.card-title Bar Chart
-                    a.heading-elements-toggle
-                      i.la.la-ellipsis-v.font-medium-3
-                    .heading-elements
-                      ul.list-inline.mb-0
-                        li
-                          a(data-action='collapse')
-                            i.ft-minus
-                        li
-                          a(data-action='reload')
-                            i.ft-rotate-cw
-                        li
-                          a(data-action='expand')
-                            i.ft-maximize
-                        li
-                          a(data-action='close')
-                            i.ft-x
-                  .card-content.collapse.show
-                    .card-body
-                      .height-400
-                        canvas#bar-chart
+          //- // Bar charts section start
+          //- section#chartjs-bar-charts
+          //-   // Column Chart
+          //-   .row
+          //-     .col-12
+          //-       .card
+          //-         .card-header
+          //-           h4.card-title Column Chart
+          //-           a.heading-elements-toggle
+          //-             i.la.la-ellipsis-v.font-medium-3
+          //-           .heading-elements
+          //-             ul.list-inline.mb-0
+          //-               li
+          //-                 a(data-action='collapse')
+          //-                   i.ft-minus
+          //-               li
+          //-                 a(data-action='reload')
+          //-                   i.ft-rotate-cw
+          //-               li
+          //-                 a(data-action='expand')
+          //-                   i.ft-maximize
+          //-               li
+          //-                 a(data-action='close')
+          //-                   i.ft-x
+          //-         .card-content.collapse.show
+          //-           .card-body
+          //-             .height-400
+          //-               canvas#column-chart
+          //-   // Bar Chart
+          //-   .row
+          //-     .col-12
+          //-       .card
+          //-         .card-header
+          //-           h4.card-title Bar Chart
+          //-           a.heading-elements-toggle
+          //-             i.la.la-ellipsis-v.font-medium-3
+          //-           .heading-elements
+          //-             ul.list-inline.mb-0
+          //-               li
+          //-                 a(data-action='collapse')
+          //-                   i.ft-minus
+          //-               li
+          //-                 a(data-action='reload')
+          //-                   i.ft-rotate-cw
+          //-               li
+          //-                 a(data-action='expand')
+          //-                   i.ft-maximize
+          //-               li
+          //-                 a(data-action='close')
+          //-                   i.ft-x
+          //-         .card-content.collapse.show
+          //-           .card-body
+          //-             .height-400
+          //-               canvas#bar-chart
           // // Bar charts section end
           // line chart section start
           section#chartjs-line-charts
@@ -78,7 +78,7 @@ block main
               .col-12
                 .card
                   .card-header
-                    h4.card-title Simple Line Chart
+                    h4.card-title Line Chart
                     a.heading-elements-toggle
                       i.la.la-ellipsis-v.font-medium-3
                     .heading-elements
