--- a/views/admin/pages/dashboard/index.pug
+++ b/views/admin/pages/dashboard/index.pug
@@ -38,7 +38,7 @@ block main
           .col-xl-4.col-lg-12
             .card.pull-up.ecom-card-1.bg-white
               .card-content.ecom-card2.height-180
-                h5.text-muted.warning.position-absolute.p-1 Services progress
+                h5.text-muted.warning.position-absolute.p-1 Posts per day
                 div
                   i.ft-shopping-cart.warning.font-large-1.float-right.p-1
                 .progress-stats-container.ct-golden-section.height-75.position-relative.pt-3
