--- a/views/group.ejs
+++ b/views/group.ejs
@@ -103,6 +103,7 @@
 
             </div>
             <div class="modal-footer">
+            <p id="add-member-error"></p>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <button type="submit" class="btn btn-primary">Create</button>
             </div>
