--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8360,6 +8360,8 @@ a[data-toggle="collapse"] {
 
 
 
+
+
 .offline-status{
   color:red
 }
@@ -8384,4 +8386,18 @@ a[data-toggle="collapse"] {
 
 #add-member-error{
   color:red
+}
+/* groupChat */
+.group-chat-container{
+  background-color: lightblue;
+  width:100%;
+  height:400px;
+  overflow: scroll;
+}
+.border{
+  width:80%
+}
+
+.group-chat-section{
+  display: none;
 }
