--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,45 @@
-<h1>Login</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sign In</title>
+        <link rel="stylesheet" href="/css/login.css">
+    </head>
 
-<% 
+    <% 
     if(typeof message !== 'undefined'){
         %>
             <h4 style="color:red"><%= message %></h4>
         <%
     }
 %>
-
-<form action="" method="POST">
-    <input type="email" placeholder="Enter Email" name="email" required>
-    <br>
-    <input type="password" placeholder="Enter Password" name="password" required>
-    <br>
-    <input type="submit" value="Login">
+    <body style="background: #949494">
+        <form action="" method="post">
+        <div class="box">
+            <div class="form">
+                
+                    <h2>Sign In</h2>
+                <div class="inputbox">
+                    <input type="text" name="email" required 
+                        value>
+                    <span>Username</span>
+                    <i></i>
+                </div>
+                <div class="inputbox">
+                    <input type="password" name="password" required>
+                    <span>Password</span>
+                    <i></i>
+                </div>
+                <div class="links">
+                    <a href="#">Forget Password?</a>
+                    <a href="/register">Signup</a>
+                </div>
+                <input type="submit" value="Login">
+                    
+                    
+            </div>
+        </div>
     </form>
+    </body>
+</html>
