--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8401,3 +8401,16 @@ a[data-toggle="collapse"] {
 .group-chat-section{
   display: none;
 }
+
+/* mess group chat */
+
+.user-data{
+  font-size: 12px;
+}
+
+.user-chat-image{
+  width:25px;
+  height: 25px;
+  border-radius: 100px;
+  border: 1px solid red;    
+}
