--- a/views/admin/layouts/default2.pug
+++ b/views/admin/layouts/default2.pug
@@ -262,14 +262,14 @@ head
           a(href='/ad/posts')
             i.ft-layers
             span.menu-title(data-i18n='') Post
-        //- li.nav-item
-        //-   a(href='buttons.html')
-        //-     i.ft-box
-        //-     span.menu-title(data-i18n='') Buttons
-        //- li.nav-item
-        //-   a(href='typography.html')
-        //-     i.ft-bold
-        //-     span.menu-title(data-i18n='') Typography
+        li.nav-item
+          a(href='/ad/maps')
+            i.ft-box
+            span.menu-title(data-i18n='') Maps
+        li.nav-item
+          a(href='/ad/contact')
+            i.ft-message-square
+            span.menu-title(data-i18n='') Contacts messages
         li.nav-item
           a(href='/ad/roles')
             i.ft-credit-card
