--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -63,6 +63,10 @@
             <a href="/create-post"><span class="fa fa-upload mr-3"></span></a>
           </li>
          
+          <li class="active">
+            <a href="/contact"><span class="fa fa-address-book mr-3"></span></a>
+          </li>
+         
          
          
           <li>
